workshop04/minio-sts.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio-ns

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio-sts
  namespace: minio-ns
spec:
  replicas: 4
  selector:
    matchLabels:
      app: minio
      name: minio-po
  serviceName: minio-hsvc
  volumeClaimTemplates:
    - metadata:
        name: data-vol
        namespace: minio-ns
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
        storageClassName: do-block-storage
  template:
    metadata:
      name: minio-po
      labels:
        app: minio
        name: minio-po
    spec:
      containers:
        - name: minio-container
          image: minio/minio:latest
          args:
            - server
            - --console-address
            - ":9001"
            - http://minio-sts-{0...3}.minio-hsvc.minio-ns.svc.cluster.local/data
          ports:
            - containerPort: 9000
              name: minio-api
            - containerPort: 9001
              name: minio-console
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 30
            exec:
              command:
                - /bin/sh
                - -c
                - "mc ready local || exit 1"
          volumeMounts:
            - name: data-vol
              mountPath: /data
          resources:
            requests:
              cpu: "200m"
              memory: "250Mi"
            limits:
              cpu: "200m"
              memory: "250Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: minio-hsvc
  namespace: minio-ns
  labels:
    app: minio
spec:
  clusterIP: None   # Headless service for StatefulSet DNS
  selector:
    app: minio
    name: minio-po
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001

---
apiVersion: v1
kind: Service
metadata:
  name: minio-svc
  namespace: minio-ns
  labels:
    app: minio
spec:
  type: ClusterIP
  selector:
    app: minio
    name: minio-po
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
